--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>I'm a recent graduate of The Iron Yard coding school's back-end engineering course*.</h2>
-                    <p class="lead">This meant coding M-F, 9-5, homework every weekday, and a project on the weekends! Here's more info on <a target="_blank" href="https://www.theironyard.com/">The Iron Yard</a>.</p>
+                    <h2>Back-end developer, skilled in ASP.NET MVC using SQL Server  Recent .</h2>
+                    <p class="lead">Graduate of <a target="_blank" href="https://www.theironyard.com/">The Iron Yard's</a> Back-End Engineering Course .</p>
                 </div>
             </div>
             <!-- /.row -->
@@ -100,7 +100,7 @@
                                 <h4>
                                     <strong>Languages</strong>
                                 </h4>
-                                <p>C#, SQL, Javascript</p>
+                                <p>C#, SQL, Javascript, HTML/CSS</p>
                                 <a href="#" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
